feat improve user internal
